# libcol

./: Makefile.am  col.c  col.h  col_errors.h  configure.ac  libcol.c
profile/: Makefile  col_int_range_benchmark.c  profile_col_int_eq_scalar.c  profile_col_int_range.c
test/: Makefile.am  libcol_test.c
